# HERMESHD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  fortran_compilation_notes.md
cmake/: ConfigurePythonWrapping.cmake
docs/: README.md
fortran/: Makefile  Makefile (backup)
fortran/src/: LIB_VTK_IO.f90  Makefile  Makefile_custom  Makefile_old  PERSEUSHydro_bitri_FH_test.f90  PERSEUSHydro_bitri_ref.f90  PERSEUSHydro_bitri_visc.f90  PERSEUSHydro_bitri_visc_FH_test.f90  auxiliary_mod.f90  basis_funcs.f90  basis_funcs_mod.f90  basis_functions_mod.f90  boundaries.f90  boundary.f90  dg_3D_hydro_bitri_H2O.f90  dg_3D_hydro_bitri_version2_FH_test.f90  dg_3D_hydro_bitri_version2_SEAN.f90  dg_3D_hydro_bitri_viscosity.f90  dg_3D_hydro_lqc.f90  dg_3D_hydro_lqc_SEAN.f90  f90wrap_hermeshd.f90  flux.f90  helpers.f90  hermeshd.f90  hermeshd.py  ic_mod.f90  init_conditions.f90  initial_conditions_mod.f90  initialcon.f90  initialize.f90  input.f90  input_2dpoiseuille.f90  input_2dpoiseuille_bw.f90  input_isentr.f90  input_poiseuille_2d.f90  input_sod.f90  integrator.f90  io.f90  io_mod.f90  lib_vtk_io.mod  (+22 more)
fortran/src/ces/: dg_3D_hydro_bitri_ten_moment_DB.f90
fortran/src/ces/10_moment/: dg_3D_hydro_bitri_ten_moment.f90  dg_3D_hydro_lqc_SEAN.f90  dg_3D_hydro_lqc_new.f90  dg_3D_hydro_lqc_save.f90
fortran/src/ces/old/: PERSEUSHydro_bitri_FH_test.f90  PERSEUSHydro_bitri_ref.f90
fortran/src/f90_inputs/: params_sod.f90
fortran/src/old/: dg_3D_hydro_bitri_H2O.f90  dg_3D_hydro_bitri_H2O_old.f90  dg_3D_hydro_bitri_ten_moment_DB.f90  dg_3D_hydro_bitri_viscosity.f90
fortran/src/old_mod/: basis_funcs_mod.f90  ic_mod.f90  perseushd_main.f90  prepare_time_advance_mod.f90
python/PERSEUS/: PERSEUSHydro_bitri_ref.py  PERSEUSHydro_bitri_ref_noMPI.py
python/src/: PERSEUSHydro_bitri_ref_noMPI.py  dg_3D_hydro_bitri_version2.py
src/: Makefile  basis.f90  basis_funcs.f90  boundary.f90  boundary_llns.f90  f90wrap_hermeshd.f90  flux.f90  flux_llns.f90  flux_new.f90  hermes.py  hermeshd.f90  hermeshd.py  initialcon.f90  initialize.f90  input.f90  input_hd.f90  integrator.f90  lj_hermes_2Dhac.py  lj_hermes_hac.py  lj_lammps_2Dhac.py  lj_lammps_hac.py  lj_pylmp_hac.py  lj_pylmp_hac_v0.py  lj_pylmp_hac_v1.py  lj_pylmp_hac_v3.py  main.f90  output.f90  params.f90  params_3Dhac.f90  params_hd.f90  perseusvars.sh  prep_step.f90  prep_step_llns.f90  prepare_step.f90  random.f90  reservoir.f90  sources.f90  spatial.f90  test_2Dhac.py  test_3Dhac.py  (+4 more)
src/ces/10_moment/: dg_2D_bitri_hydro_10_moment_imp_source.f90  dg_3D_hydro_lqc_SEAN.f90  dg_3D_hydro_ten_moment_Gamma_form_v1_test2.f90
src/ces/old/: dg_3D_hydro_bitri_version2_SEAN.f90
src/f90_inputs/: params_2dpoiseuille.f90  params_isentr.f90
src/old_mod/: parameters_mod.f90
src/vtk/: lib_vtk_io.mod
tests/: README.md
tests/1D_sod_shock_tube/: params_sod.f90
tests/2D_hydro_jet/: input_hd.f90  params_hd.f90
tests/2D_isentropic_vortex/: input_isentr.f90
